--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mapbox-gl-js-examples",
+  "name": "maplibre-gl-js-examples",
   "version": "0.0.0",
-  "description": "Integrating Jawg Maps with Mapbox GL JS",
+  "description": "Integrating Jawg Maps with MapLibre GL JS",
   "dependencies": {},
   "devDependencies": {
     "js-beautify": "^1.11.0"
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jawg/mapbox-gl-js-examples.git"
+    "url": "https://github.com/jawg/maplibre-gl-js-examples.git"
   },
   "author": "Jawg Maps <contact@jawg.io> (https://jawg.io)",
   "license": "MIT"
