--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,6 +32,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Replace JAWG access-token
+        run: find . -type f -exec sed -i "s/<YOUR_ACCESS_TOKEN>/${{ secrets.JAWG_MAPS_EXAMPLES_ACCESS_TOKEN }}/" {} \;
+      - name: Replace custom style id
+        run: find . -type f -exec sed -i "s/<YOUR_CUSTOM_STYLE_ID>/${{ vars.JAWG_MAPS_EXAMPLES_CUSTOM_STYLE_ID }}/" {} \;
       - name: Replace GIS access-token
         run: find . -type f -exec sed -i "s/<YOUR_GIS_ACCESS_TOKEN>/${{ secrets.JAWG_MAPS_EXAMPLES_ACCESS_TOKEN }}/" {} \;
       - name: Replace simple map ID
